--- a/client-myjss/src/app/modules/quotation/components/checkout/checkout.component.html
+++ b/client-myjss/src/app/modules/quotation/components/checkout/checkout.component.html
@@ -465,7 +465,7 @@
       <div class="mb-2">
         <generic-input *ngIf="document.isRecipientAffaire"
           [(model)]="quotation!.assoAffaireOrders[0].affaire.mails[0].mail" label="Mail de mon client"
-          [form]="documentForm" propertyName="affaireMail" [isMandatory]="true" [isDisabled]="false"
+          [form]="documentForm" propertyName="affaireMail" [isMandatory]="true" [isDisabled]="false" type="email"
           [maxLength]="250"></generic-input>
       </div>
       <div class="row ps-4 pb-3">
@@ -542,7 +542,7 @@
       <div class="mb-2">
         <generic-input *ngIf="document.isRecipientAffaire"
           [(model)]="quotation!.assoAffaireOrders[0].affaire.mails[0].mail" label="Mail de mon client"
-          [form]="documentForm" propertyName="affaireMailDigital" [isMandatory]="true" [isDisabled]="false"
+          [form]="documentForm" propertyName="affaireMailDigital" [isMandatory]="true" [isDisabled]="false" type="email"
           [maxLength]="250"></generic-input>
       </div>
       <div class="row ps-4 pb-3">
@@ -577,8 +577,8 @@
       </generic-toggle>
       <div class="row ps-4 pb-3">
         <generic-toggle *ngIf="document.isRecipientClient" [(model)]="document.addToClientMailList"
-          label="Ajouter des adresses mails en copie de moi" [form]="documentForm"
-          propertyName="addToClientMailListDigital" [isMandatory]="false">
+          label="Ajouter des adresses mails en copie" [form]="documentForm" propertyName="addToClientMailListDigital"
+          [isMandatory]="false">
         </generic-toggle>
 
         <generic-input (onFormChange)="saveDraftQuotation()" class="pb-0 pt-2"
