--- a/client-myjss/src/app/modules/quotation/components/quotation-file-uploader/quotation-file-uploader.component.html
+++ b/client-myjss/src/app/modules/quotation/components/quotation-file-uploader/quotation-file-uploader.component.html
@@ -67,7 +67,7 @@
 
                 <!-- Date of document -->
                 <div class="row align-items-center mb-3"
-                  *ngIf="entity.typeDocument.attachmentType.isDocumentDateRequired || true">
+                  *ngIf="entity.typeDocument.attachmentType.isDocumentDateRequired ">
                   <div class="col-4">Date du document*</div>
                   <div class="col-8">
                     <generic-date-picker [(model)]="attachment.attachmentDate" label="  " [form]="uploadForm"
