fix condition ngIf quotation-details

--- a/client-myjss/src/app/modules/my-account/components/quotation-details/quotation-details.component.html
+++ b/client-myjss/src/app/modules/my-account/components/quotation-details/quotation-details.component.html
@@ -251,7 +251,7 @@
               </li>
 
               <li [ngbNavItem]="3"
-                *ngIf="quotationAttachments[service.id] && quotationAttachments[service.id].length>0">
+                *ngIf="quotationAttachments && quotationAttachments[service.id] && quotationAttachments[service.id].length>0">
                 <button ngbNavLink>Documents disponibles <span class="badge bg-success"
                     style="margin-left: 10px;"></span></button>
                 <ng-template ngbNavContent>
