fix large and mobile screen

--- a/client-myjss/src/app/modules/quotation/components/checkout/checkout.component.html
+++ b/client-myjss/src/app/modules/quotation/components/checkout/checkout.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <form class="needs-validation container position-relative z-2 pt-5 pb-lg-5 pb-md-4 pb-2" novalidate>
+  <form class="needs-validation container position-relative z-2 pt-5 pb-5 mb-md-2 mb-lg-0" novalidate>
     <div class="row justify-content-between">
       <div class="col-lg-7">
         <!-- Connexion -->
@@ -186,7 +186,7 @@
       </div>
 
       <!-- Order summary -->
-      <div class="col-lg-5">
+      <div class="col-lg-5 pb-5">
         <div>
           <div class="d-none d-lg-block start-57 background-right h-100">
           </div>
