--- a/client-jss/src/app/main/components/subscription/subscription.component.html
+++ b/client-jss/src/app/main/components/subscription/subscription.component.html
@@ -154,7 +154,7 @@
           <div class="col p-4 pt-3 card-body align-items-center">
             <p class="text-center">Étudiants et enseignants</p>
             <a class="btn btn-yellow btn-yellow-burger w-100 mb-2"
-              (click)="subscribe($event, false, true, false, null)">S'abonner</a>
+              (click)="subscribe($event, true, true, false, null)">S'abonner</a>
             <ul class="list-unstyled p-2 ps-3 mb-0">
               <li>
                 <span class="fw-bold">Un service client dédié </span>pour tout renseignement (hotline)
@@ -192,7 +192,7 @@
           <div class="col p-4 pt-3 card-body align-items-center">
             <p class="text-center">Sans conditions</p>
             <a class="btn btn-yellow btn-yellow-burger w-100 mb-2"
-              (click)="subscribe($event, false, false, false, null)">S'abonner</a>
+              (click)="subscribe($event, true, false, false, null)">S'abonner</a>
             <ul class="list-unstyled p-2 ps-3 mb-0">
               <li>
                 <span class="fw-bold">Un service client dédié </span>pour tout renseignement (hotline)
