--- a/client/src/app/modules/reporting/components/my-indicators/my-indicators.component.html
+++ b/client/src/app/modules/reporting/components/my-indicators/my-indicators.component.html
@@ -1,12 +1,12 @@
 <div class="mat-elevation-z2 form-div">
-  <div *ngIf="canDisplayMyIndicatorsForEverybody">
+  <div *ngIf="canDisplayMyIndicatorsForEverybody()">
     <autocomplete-employee [(model)]="currentEmployee" [form]="formIndicator" propertyName="currentEmployee"
       [isMandatory]="false" [isDisabled]="false" label="Employé sélectionné"
       (onOptionSelected)="loadValues()"></autocomplete-employee>
   </div>
 
   <div class="dashboard-container" fxLayout="row wrap" fxLayoutGap="16px" fxLayoutAlign="start stretch">
-    <h2>Indicateurs Objectivés</h2>
+    <h2>Indicateurs objectivés</h2>
     <div style="display: flex; flex-wrap: wrap;">
       <ng-container *ngFor="let item of values">
         <mat-card class="indicator-card pointer" *ngIf="hasKpi(item)" appearance="outlined"
@@ -29,7 +29,7 @@
     </div>
   </div>
   <div class="dashboard-container" fxLayout="row wrap" fxLayoutGap="16px" fxLayoutAlign="start stretch">
-    <h2>Indicateurs meusurés</h2>
+    <h2>Indicateurs mesurés</h2>
     <ng-container *ngFor="let group of indicatorGroups">
       <div style="display: flex; flex-wrap: wrap;">
         <ng-container *ngFor="let item of values">
